// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comps/Timer 1秒后过期 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer Date对象 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      01
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer 基本使用 => fill 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc corn-timer-fill"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      01
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer 基本使用 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      01
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer 基本使用 天 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-f corn-ac corn-jc corn-timer-day"
      data-testid="day"
    >
      1
      天
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer 基本使用 小时 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      01
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer 基本使用 秒 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      03
    </div>
  </div>
</div>
`;

exports[`comps/Timer 日期字符串 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      00
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      01
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      00
    </div>
  </div>
</div>
`;

exports[`comps/Timer 自定义渲染像 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class=""
    >
      hous
      =
      00
    </div>
    <div
      class=""
    >
      min
      =
      00
    </div>
    <div
      class=""
    >
      sec
      =
      01
    </div>
  </div>
</div>
`;

exports[`comps/Timer 过期 1`] = `
<div>
  <div
    class="corn-timer corn-if corn-ac corn-jc"
  >
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="hous"
    >
      0
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="min"
    >
      0
    </div>
    <div
      class="corn-timer-symbol"
    >
      :
    </div>
    <div
      class="corn-timer-item corn-f corn-ac corn-jc"
      data-testid="sec"
    >
      0
    </div>
  </div>
</div>
`;
